[workspace]
members = ["xtask"]

[package]
name = "hardwave-loudlab"
version = "0.4.0"
edition = "2021"
license = "Proprietary"
description = "Hardwave LoudLab — AI-assisted mastering VST3/CLAP plugin by Hardwave Studios"

[lib]
crate-type = ["cdylib"]

[features]
default = ["gui"]
gui = ["dep:wry"]

[dependencies]
# ── nih-plug (VST3 / CLAP framework) ─────────────────────────────────────────
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git" }

# ── GUI: wry WebView ─────────────────────────────────────────────────────────
wry = { version = "0.46", optional = true }

# ── Serialisation ─────────────────────────────────────────────────────────────
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ── Concurrency & atomics ────────────────────────────────────────────────────
crossbeam-channel = "0.5"
parking_lot = "0.12"

# ── FFT ──────────────────────────────────────────────────────────────────────
rustfft = "6.2"

# ── Auth token storage ───────────────────────────────────────────────────────
dirs = "5"

# ── raw-window-handle bridge ─────────────────────────────────────────────────
raw-window-handle = "0.6"

# ── Linux GTK ────────────────────────────────────────────────────────────────
[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[profile.release]
lto = "thin"
